# up-android-core

./: .gitignore  CONTRIBUTORS.adoc  README.adoc  README.md  gradle.properties  org.eclipse.uprotocol.core.powersave.xml  privapp-permissions-org.eclipse.uprotocol.core.xml  settings.gradle  testing.adoc
.github/workflows/: gradle.yml
gradle/: config.gradle  jacoco.gradle  libs.versions.toml
service/: build.gradle  proguard-rules.pro
service/certs/: platform.keystore
service/src/main/rust/ustreamer-glue/: Cargo.toml
service/src/main/rust/ustreamer-glue/src/: lib.rs
up-core-android/: README.adoc  org.eclipse.uprotocol.core.powersave.xml  privapp-permissions-org.eclipse.uprotocol.core.xml  settings.gradle
up-core-android/gradle/: config.gradle  jacoco.gradle  libs.versions.toml
up-core-android/service/: build.gradle
up-discovery-android/: .gitignore  NOTICE  README.adoc  gradle.properties  gradlew  privapp-permissions-org.eclipse.uprotocol.core.udiscovery.xml  settings.gradle
up-discovery-android/gradle/: config.gradle  jacoco.gradle  libs.versions.toml
up-discovery-android/service/: build.gradle  gradle.properties  proguard-rules.pro
up-example-android/: README.adoc  gradle.properties  privapp-permissions-org.eclipse.uprotocol.example.service.xml  settings.gradle
up-example-android/client/: build.gradle  proguard-rules.pro
up-example-android/common/: build.gradle
up-helloworld-example-android/: README.md  build.gradle  gradle.properties  settings.gradle
up-simulator-proxy/: README.adoc  gradle.properties  settings.gradle
(+251 files in other folders)
