[package]
name = "ustreamer-glue"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
binder = { git = "https://github.com/PLeVasseur/binder_rs.git", branch = "main" }
binder_ndk_sys = { git = "https://github.com/PLeVasseur/binder_rs.git", branch = "main" }
binder_tokio = { git = "https://github.com/PLeVasseur/binder_rs.git", branch = "main" }
jni = "0.21.1"
aidl-rust-codegen = { git = "https://github.com/PLeVasseur/up-client-android-rust.git", branch = "feature/initial_implementation" }
